_generated-doc/3.2/config/quarkus-flyway-flyway-build-time-config.adoc

:summaryTableId: quarkus-flyway-flyway-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-flyway-flyway-build-time-config_configuration]]link:#quarkus-flyway-flyway-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-flyway-flyway-build-time-config_quarkus-flyway-locations]]`link:#quarkus-flyway-flyway-build-time-config_quarkus-flyway-locations[quarkus.flyway.locations]`


[.description]
--
Comma-separated list of locations to scan recursively for migrations. The location type is determined by its prefix.

Unprefixed locations or locations starting with classpath: point to a package on the classpath and may contain both SQL and Java-based migrations.

Locations starting with filesystem: point to a directory on the filesystem, may only contain SQL migrations and are only scanned recursively down non-hidden directories.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`db/migration`


a|icon:lock[title=Fixed at build time] [[quarkus-flyway-flyway-build-time-config_quarkus-flyway-callbacks]]`link:#quarkus-flyway-flyway-build-time-config_quarkus-flyway-callbacks[quarkus.flyway.callbacks]`


[.description]
--
Comma-separated list of fully qualified class names of Callback implementations to use to hook into the Flyway lifecycle. The `org.flywaydb.core.api.callback.Callback` subclass must have a no-args constructor and must not be abstract. These classes must also not have any fields that hold state (unless that state is initialized in the constructor).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY_CALLBACKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY_CALLBACKS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-flyway-flyway-build-time-config_quarkus-flyway-named-data-sources-locations]]`link:#quarkus-flyway-flyway-build-time-config_quarkus-flyway-named-data-sources-locations[quarkus.flyway."named-data-sources".locations]`


[.description]
--
Comma-separated list of locations to scan recursively for migrations. The location type is determined by its prefix.

Unprefixed locations or locations starting with classpath: point to a package on the classpath and may contain both SQL and Java-based migrations.

Locations starting with filesystem: point to a directory on the filesystem, may only contain SQL migrations and are only scanned recursively down non-hidden directories.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__LOCATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__LOCATIONS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`db/migration`


a|icon:lock[title=Fixed at build time] [[quarkus-flyway-flyway-build-time-config_quarkus-flyway-named-data-sources-callbacks]]`link:#quarkus-flyway-flyway-build-time-config_quarkus-flyway-named-data-sources-callbacks[quarkus.flyway."named-data-sources".callbacks]`


[.description]
--
Comma-separated list of fully qualified class names of Callback implementations to use to hook into the Flyway lifecycle. The `org.flywaydb.core.api.callback.Callback` subclass must have a no-args constructor and must not be abstract. These classes must also not have any fields that hold state (unless that state is initialized in the constructor).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CALLBACKS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FLYWAY__NAMED_DATA_SOURCES__CALLBACKS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===